# learning-QDs-parameters

./: .gitignore  README.md  config.py  config_data_gen.json  config_data_gen_A_couled.json  config_data_gen_B_uncoupled.json  data_generation.py  data_generation_JAK.ipynb  data_generation_test.ipynb  dataset_generation.py  example.ipynb  exampleJK.ipynb  example_interp.ipynb  gen_data_script.py  gen_data_utils.py  grid_search.py  interp_models.py  main.py  plot_results.py  pyproject.toml  read.me  requirements.txt  results_log-pl.csv  run_gen_data.ipynb  setup.bat  setup.sh  testing.ipynb  testing_qdarts.ipynb  train_evaluate.py  utilities.py
configs/data_generation/: test.json
configs/model/: model_config.json
generated_data_A/datapoint_00000/: data.npz
generated_data_A/datapoint_00001/: data.npz
generated_data_B/datapoint_00000/: data.npz
generated_data_B/datapoint_00001/: data.npz
models/: multihead_CNN.py  transfer_CNN.py  vanilla_CNN.py
notes/: plan.md
qdarts/: data_generation.py  experiment.py  model.py  noise_processes.py  plotting.py  simulator.py  tunneling_simulator.py
qdarts/docs/: search.html
src/: grid_search.py  train_evaluate.py
src/models/: img_encoder.py  multi_branch.py  transfer_CNN.py  vanilla_CNN.py
src/utilities/: model_utils.py  plots_utils.py  utils.py
test/: Test_csd.ipynb
utilities/: config.py  interpt_utils.py  model_utils.py  plots_utils.py  utils.py
