[tool.poetry]
name = "learning_parameters"
version = "0.1.0"
description = "Learning parameters for quantum dot systems"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "learning_parameters", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
matplotlib = "^3.4"
torch = "^1.9"
h5py = "^3.3"
pillow = "^8.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_dataset = "learning_parameters.dataset_generation:main"

